# framebreaker

./: Cargo.toml  LICENSE  README.md
UAP-protocol/: LICENSE  PROJECT_LOG.md  README.md
UAP-protocol/appendices/: G_Layer_Theories.md
UAP-protocol/docs/: Y0_Landing.md
UAP-protocol/history/canon/: 2025-12-06_the_discovery.md
UAP-protocol/proofs/: proof-001.md
UAP-protocol/specs/: L6_Spec.md  PSS_v1.0.md
src/: lib.rs  main.rs
src/core/: api.rs  dc_parser.rs  facelock.rs  mod.rs  proof.rs  r_parser.rs  snapshot.rs
src/types/: dc.rs  mod.rs  output.rs  proof.rs  reason.rs  signals.rs  snapshot.rs  state.rs  turn.rs
tests/: slice1_integration.rs  slice2_integration.rs  slice3_integration.rs  slice4_integration.rs  slice5_integration.rs
uap-protocol/: README.md
uap-protocol/appendices/: G_Layer_Quantum.md
uap-protocol/docs/: M1_Protocol.md  UAP_Protocol_Document_M1_v1.0.docx
