[package]
name = "soul0"
version = "1.0.0"
edition = "2021"
authors = ["PhaseLock Team"]
license = "MIT"
description = "Reference implementation of PhaseLock protocol - Soul-0"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for r-parser
regex = "1.10"
lazy_static = "1.4"

# Crypto for proofs
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Terminal colors
colored = "2.1"

# HTTP API (Slice 5)
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "soul0"
path = "src/main.rs"

[lib]
name = "soul0"
path = "src/lib.rs"
